irrlamb 0.3.0 -
- UI now scales with resolution
- Reworked UI theme
- Physics now runs at 1000hz
- Added replay sorting
- Added gameplay options
- Updated some tutorial levels
- Windows build now uses MinGW-w64
- Added irrlicht source to project and fixed many irrlicht bugs
- Added mouse sensitivity to options
- Fixed replays on 32-bit version
- Increased quality of in-game screenshots

irrlamb 0.2.1 - 2015-10-02
- Redesigned replay screen
- Added new tutorial level
- Added installer for windows
- Can selectively enable gamepads in config file
- Added per-axis deadzone to config
- Next-level button works across campaigns now
- Added level name and highscore to HUD
- Autosave replays for new records
- Updated replay format
- Switched to c++11
- Various fixes to build system

irrlamb 0.2.0 - 2015-09-19
- Added gamepad support
- Added per-pixel lighting
- Added new levels
- Made menus and fonts bigger
- Can access options in-game now
- Added shaders, anisotropic filtering, V-sync, and MSAA to video options
- Added level names to menu
- Fixed replay bug
- Fixed memory leaks

irrlamb 0.1.1 - 2013-03-03
- Added audio (OpenAL)
- Added screen fading
- Added shader support
- Added support for customlevels
- Added invert mouse option (or press F2 during play)
- Save data now in %APPDATA%/irrlamb for windows
- Converted meshes to a binary format for faster loading
- Fixed a Lua API bug in Object.GetPosition
- Removed scons, added cmake.

irrlamb 0.1.0 - 2010-01-06
- Completely updated the game's graphics
- Added 12 tutorial levels + 2 skate levels
- Added ability to set shadows, filtering, and AA in config file
- Added cylinder objects
- Physics are now framerate independent
- Cleaned up level format
- Cleaned up Lua API
- Reduced replay file size
- Removed boost dependencies
- Updated irrlicht to 1.6
- Updated bullet to 2.75
- Added SQLite for level stats
- Fixed various bugs
- Removed audio, old levels, and grapple for now
- Refactored lots of code
